# pMultiStepPGGenerator

./: fullProjectCode.txt
PGCreationStep1/: .gitignore  0.compile  1.run  CMakeLists.txt  fullProjectCode.txt  main.cpp
PGCreationStep1/headers/: actions.h  geometry.h  run.h  runaction.h  stepaction.h  trackinfo.h
PGCreationStep1/sources/: actions.cpp  generator.cpp  geometry.cpp  physics.cpp  pworld.cpp  runaction.cpp  stepaction.cpp
SimulationOfSetupStep2/: 1.run  CMakeLists.txt  fullProjectCode.txt  main.cpp
SimulationOfSetupStep2/headers/: actions.h  eventaction.h  generator.h  geometry.h  stackaction.h
SimulationOfSetupStep2/macros/: vis.mac
SimulationOfSetupStep2/sources/: actions.cpp  eventaction.cpp  generator.cpp  geometry.cpp  physics.cpp  runaction.cpp  stackaction.cpp  stepaction.cpp
analysis/: analysis.ipynb
data/: Final_WaterCa0_run0_t0.root  PhaseSpace_WaterCa0_run0_t0.root  PhaseSpace_WaterCa0_run1_t0.root  PhaseSpace_WaterCa0_run2_t0.root
data/detectorSimulationOutput/WaterCa0/: DetectorOutput_WaterCa0_run0.root  DetectorOutput_WaterCa0_run1.root  DetectorOutput_WaterCa0_run10.root  DetectorOutput_WaterCa0_run11.root  DetectorOutput_WaterCa0_run3.root  DetectorOutput_WaterCa0_run7.root  DetectorOutput_WaterCa0_run9.root
data/materialPhaseSpaces/WaterCa0/: PhaseSpace_WaterCa0.root
data/materialPhaseSpaces/WaterCa0/log/: merge.out  step1_1.out  step1_10.out  step1_2.out  step1_3.out  step1_4.out  step1_5.out  step1_6.out  step1_7.out  step1_8.out  step1_9.out  step2.out
data/materialPhaseSpaces/WaterCa0/tmp_multifiles/: PhaseSpace_WaterCa0_run1.root  PhaseSpace_WaterCa0_run10.root  PhaseSpace_WaterCa0_run2.root  PhaseSpace_WaterCa0_run3.root  PhaseSpace_WaterCa0_run4.root  PhaseSpace_WaterCa0_run5.root  PhaseSpace_WaterCa0_run6.root  PhaseSpace_WaterCa0_run7.root  PhaseSpace_WaterCa0_run8.root  PhaseSpace_WaterCa0_run9.root
headers/: physics.h  pworld.h  runaction.h
log/: master_seed_log.txt
scripts/: 0.compileBoth  local_simulation.sh  submit_pipeline.sh
sharedFiles/: shared_materials.h  shared_params.h
sources/: actions.cpp  generator.cpp  geometry.cpp  run.cpp  stepaction.cpp
